Updated mappings